Added some if and for loop to intro

--- a/examples/Intro_Python_Geo.ipynb
+++ b/examples/Intro_Python_Geo.ipynb
@@ -111,6 +111,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for mything in times:\n",
+    "    print(mything)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for myindex, mything in enumerate(times):\n",
+    "    print(\"index:\",myindex,\" The thing in my 'times' list:\",mything)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age=140\n",
+    "while age < time:\n",
+    "    print(\"time:\", time, \" age:\", age, \" difference:\",time-age)\n",
+    "    age=age+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Control statements, if, for, while, try, \n",
+    "if time < 200:\n",
+    "    print(time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if time <= 200:\n",
+    "    print(geological_age)\n",
+    "elif time > 200:\n",
+    "    print(\"Triassic age\")\n",
+    "else:\n",
+    "    pass #This option is not necessarily needed, but can be useful in some scenarios"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -317,6 +374,64 @@
     "plt.ylabel('Latitude')\n",
     "plt.xlabel('Longitude')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lats=cudata4[:,0]\n",
+    "longs=cudata4[:,1]\n",
+    "age=cudata4[:,3]\n",
+    "copper=cudata4[:,2]\n",
+    "\n",
+    "#lats_rich=lats[copper>2]\n",
+    "\n",
+    "fig = plt.figure(figsize=(6,4),dpi=150)\n",
+    "\n",
+    "plt.scatter(longs,lats,s=age/1000,c=copper,vmin=0, vmax=1000,cmap=plt.cm.copper)\n",
+    "plt.title('Copper Deposits from EarthChem.org')\n",
+    "plt.ylabel('Latitude')\n",
+    "plt.xlabel('Longitude')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def reject_outliers(data):\n",
+    "    m = 2\n",
+    "    u = np.mean(data)\n",
+    "    print(\"mean is:\", u)\n",
+    "    s = np.std(data)\n",
+    "    print(\"std is:\", s)\n",
+    "    filtered = [e for e in data if (u - 2 * s < e < u + 2 * s)]\n",
+    "    print(\"removed:\",np.shape(data)[0] - np.shape(filtered)[0])\n",
+    "    return filtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_age=reject_outliers(copper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(copper[copper>1],'k.')"
    ]
   },
   {
