--- a/examples/Intro_Python_Geo.ipynb
+++ b/examples/Intro_Python_Geo.ipynb
@@ -13,16 +13,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "2+4*10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The age of the sample is 145  Million years\n"
+     ]
+    }
+   ],
    "source": [
     "#Now you can use that variable in different ways.... firstly print it out to the screen\n",
     "print(\"The age of the sample is\", time, \" Million years\")"
@@ -45,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "201\n"
+     ]
+    }
+   ],
    "source": [
     "#Nothing printed out above? Good. Jupyter Notebooks won't always do that so let's tell Python to print it.\n",
     "print(endtime)"
@@ -65,9 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My sample is  201  Million years old from the Jurassic  age.\n"
+     ]
+    }
+   ],
    "source": [
     "#Make a new 'string' variable\n",
     "geological_age='Jurassic'\n",
@@ -78,9 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4.5, 8.2, 'Jurassic', 'Another string']\n"
+     ]
+    }
+   ],
    "source": [
     "#Make a Python List object, similar to an array.\n",
     "times=[1,4.5,5+3.2,geological_age,\"Another string\"]\n",
@@ -93,9 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "#indexing\n",
     "print(times[0])"
@@ -103,11 +154,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Another string\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(times[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(times[4][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions\n",
+    "These are bits of code you want to perhaps use many times, or keep them self contained, or refer to a different points. They can take values as input and give values backs (or not). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(times[4])"
+    "def add_numbers(x,y):\n",
+    "    '''adds two numbers\n",
+    "    usage: myaddition=addnumbers(x,y)\n",
+    "    returns: z\n",
+    "    inputs: x,y\n",
+    "    x and y are two integers\n",
+    "    z is the summation of x and y\n",
+    "    '''\n",
+    "    \n",
+    "    z=x+y\n",
+    "    \n",
+    "    return(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_numbers(1,2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loops, operators, conditions\n",
+    "Python is great for doing something a million times. It can be useful if you have many samples/datapoints and you want to operate or manipulate those points."
    ]
   },
   {
@@ -165,6 +297,62 @@
     "    print(\"Triassic age\")\n",
     "else:\n",
     "    pass #This option is not necessarily needed, but can be useful in some scenarios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Another function\n",
+    "def timescale(t):\n",
+    "    print(t)\n",
+    "    if (t <= 4500) & (t > 2500):\n",
+    "        return(\"Archean\")\n",
+    "\n",
+    "    elif (t <=2500) & (t > 541):\n",
+    "        return(\"Proterozoic\")\n",
+    "\n",
+    "    elif (t <= 541) & (t > 252):\n",
+    "        return(\"Palaeozoic\")\n",
+    "\n",
+    "    elif (t <=252) & (t > 65):\n",
+    "        return(\"Palaeozoic\")\n",
+    "\n",
+    "    elif (t <=65) & (t >= 0):\n",
+    "        return(\"Cenozoic\")\n",
+    "\n",
+    "    else:\n",
+    "        print (\"Expect number between 0 and 4500, got:\",t)\n",
+    "        return(float('nan'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Cenozoic'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timescale(1)"
    ]
   },
   {
@@ -343,6 +531,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are definitely some outliers with latitudes and longitudes. So let's restrict just our points to range -180:180 and -90:90."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -354,13 +549,27 @@
     "cudata=chemdata[chemdata[:,1]>-180]\n",
     "#Repeat for less than 180\n",
     "cudata2=cudata[cudata[:,1]<180]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Le"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "#Repeat for latitudes less than 90\n",
     "cudata3=cudata2[cudata2[:,0]<90]\n",
     "#Repeat for greater than -90\n",
-    "cudata4=cudata3[cudata3[:,0]>-90]\n",
-    "\n",
-    "print(\"We have removed\", chemdata.shape[0]-cudata4.shape[0], \"samples\")"
+    "cudata4=cudata3[cudata3[:,0]>-90]"
    ]
   },
   {
