cleaned up both notebooks

--- a/examples/Intro_Python_Geo.ipynb
+++ b/examples/Intro_Python_Geo.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "42"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,30 +113,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 4.5, 8.2, 'Jurassic', 'Another string']\n"
+      "[1, 4.5, 8.2, 'Jurassic', 'Another string', True]\n"
      ]
     }
    ],
    "source": [
     "#Make a Python List object, similar to an array.\n",
-    "times=[1,4.5,5+3.2,geological_age,\"Another string\"]\n",
+    "times=[1,4.5,5+3.2,geological_age,\"Another string\",True]\n",
     "\n",
     "print(times)\n",
     "\n",
     "#There are many different types of data types and objects: \n",
-    "#int, long, float, complex, NaN, logical, String, Lists, Tuple, Dictionary, functions, etc"
+    "#int, long, float, complex, NaN, logical, String, Lists, Tuple, Dictionary, functions, classes, etc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -191,15 +191,16 @@
    "metadata": {},
    "source": [
     "### Functions\n",
-    "These are bits of code you want to perhaps use many times, or keep them self contained, or refer to a different points. They can take values as input and give values backs (or not). "
+    "These are bits of code you want to perhaps use many times, or keep self contained, or refer to at different points. They can take values as input and give values back (or not). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Declare the name of the function\n",
     "def add_numbers(x,y):\n",
     "    '''adds two numbers\n",
     "    usage: myaddition=addnumbers(x,y)\n",
@@ -215,8 +216,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note the indentation - Python forces your code to be nicely readable by using 'whitespace'/indentation to signify what chunks of code are related. You will see this more later.\n",
+    "    \n",
+    "Many functions have a header - formatted as a multiline comment with three '''. This hopefully will tell you about the function\n",
+    "\n",
+    "Anyway, let's run our function, now that we have initialised it!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +237,7 @@
        "3"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,13 +256,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4.5\n",
+      "8.2\n",
+      "Jurassic\n",
+      "Another string\n"
+     ]
+    }
+   ],
    "source": [
+    "#Loop through our list 'times' that we defined above\n",
     "for mything in times:\n",
     "    print(mything)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -301,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,27 +362,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Cenozoic'"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "timescale(1)"
    ]
@@ -556,7 +570,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le"
+    "We can make that a litte clearer for the latitude values to see what is actually going on..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goodlat=cudata2[:,0]<90\n",
+    "print(goodlat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goodlat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cudata2"
    ]
   },
   {
@@ -569,7 +611,10 @@
     "#Repeat for latitudes less than 90\n",
     "cudata3=cudata2[cudata2[:,0]<90]\n",
     "#Repeat for greater than -90\n",
-    "cudata4=cudata3[cudata3[:,0]>-90]"
+    "cudata4=cudata3[cudata3[:,0]>-90]\n",
+    "\n",
+    "\n",
+    "print(\"We have removed\", chemdata.shape[0]-cudata4.shape[0], \"samples\")"
    ]
   },
   {
