spelling, comments, borders to scatterdots

--- a/examples/ML_Geo.ipynb
+++ b/examples/ML_Geo.ipynb
@@ -6,18 +6,19 @@
    "source": [
     "# Data Science for Geoscience\n",
     "\n",
-    "Let's use some standard Machine Learning tools availble in Python packages to analyse some data.\n",
+    "Let's use some standard Machine Learning tools available in Python packages to analyse some data.\n",
     "\n",
-    "We have a dataset (from Butterworth etal 2016) with a collection of tectonomagmatic parameters associated with the time and location of porphyry copper deposits. We want to determine which of these (if any) parameters are geologically important (or at least statiscly signifcant) in relation to the formation of porphyry copppers.\n",
+    "We have a dataset (from Butterworth et al 2016) with a collection of tectonomagmatic parameters associated with the time and location of porphyry copper deposits. We want to determine which of these (if any) parameters are geologically important (or at least statistically significant) in relation to the formation of porphyry coppers.\n",
     "\n",
-    "Run the next cell to see an animation representing this data\n",
-    "\n"
+    "Run the next cell to see an animation representing this data\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from IPython.display import Image\n",
@@ -29,13 +30,15 @@
    "metadata": {},
    "source": [
     "### Now, import most of the modules we need\n",
-    "By convetion module loads go at the top of your workflows."
+    "By convention module loads go at the top of your workflows."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import pandas #For dealing with data structures\n",
@@ -69,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Use pandas to load in the machine learning dataset\n",
@@ -79,7 +84,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#Print out the dataset so we can see what it looks like\n",
@@ -90,23 +97,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are 21 columns (python (usually) counts from 0) representing different parameters. Some of these parameters may be useful for us. Some are not. The final column shows is a binary flag representing whether there is a known porphyry copper deposit at that location or not. The \"non-deposits\" are required to train our Machine Learning classifier what a porphyry deposit looks like, and also, what a porphyry deposit doesn't look like!\n",
+    "There are 21 columns (python (usually) counts from 0) representing different parameters. Some of these parameters may be useful for us. Some are not. The final column contains a binary flag representing whether there is a known porphyry copper deposit at that location or not. The \"non-deposits\" are required to train our Machine Learning classifier what a porphyry deposit looks like, and also, what a porphyry deposit doesn't look like!\n",
     "\n",
-    "Now let's perform our machine learning binary classification."
+    "### Now let's perform our machine learning binary classification."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#Change data format to numpy array for easy manipulation\n",
     "ml_data_np=ml_data.values\n",
     "\n",
-    "#Set the indicies of the parameters (features) to include in the ML\n",
-    "#params=[6,9,14,17] \n",
-    "params=[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]\n",
+    "#Set the indices of the parameters (features) to include in the ML\n",
+    "#params=[0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]\n",
+    "# Alternatively try any 4 features you'd like to include!\n",
+    "params=[6,9,14,17] \n",
     "\n",
     "\n",
     "#Save the number of parameters we have chosen\n",
@@ -128,12 +138,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "print('Make the classifiers')\n",
     "\n",
-    "print('Random Forrest...')\n",
+    "print('Random Forest...')\n",
     "#create and train the random forest\n",
     "#multi-core CPUs can use: rf = RandomForestClassifier(n_estimators=100, n_jobs=2)\n",
     "#n_estimators use between 64-128 doi: 10.1007/978-3-642-31537-4_13\n",
@@ -155,7 +167,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#Make a list of labels for our chosen features\n",
@@ -179,21 +193,22 @@
     "for i,label in enumerate(paramLabels):\n",
     "    print(\"%1.3f \\t\\t %s\" % (rf.feature_importances_[i],label))\n",
     "\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now if we can measure the tectonomagmatic properties at some point. Based on our trained classifer we can predict a probablyity that porphyry copper deposits have formed"
+    "Now if we can measure the tectonomagmatic properties at some point. Based on our trained classifer we can predict a probability that porphyry copper deposits have formed"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#Apply the trained ML to our gridded data to determine the probabilities at each of the points\n",
@@ -203,9 +218,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Maps!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "filename=\"../data/EarthByte_Zahirovic_etal_2016_ESR_r888_AgeGrid-0.nc\"\n",
@@ -216,7 +240,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "varX=data.variables['lon'][:]\n",
@@ -228,7 +254,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#Make a figure object\n",
@@ -256,24 +284,26 @@
     "ax.set_ylabel('Latitude')\n",
     "\n",
     "#Put a title on it\n",
-    "plt.title(\"Global Seafloor Age Grid \\n (Zahirovic etal. 2016)\")\n",
+    "plt.title(\"Global Seafloor Age Grid \\n (Zahirovic et al. 2016)\")\n",
     "\n",
     "plt.show()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
-    "#For loops plotting shapefiles"
+    "### For loops plotting shapefiles"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#Load in plate polygons for plotting\n",
@@ -293,7 +323,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "filename=\"../data/topodata.nc\"\n",
@@ -305,7 +337,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "topoX=data.variables['X'][:]\n",
@@ -315,13 +349,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make a prettier map"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "#Make a prettier map\n",
-    "\n",
     "#Make the base figure\n",
     "fig = plt.figure(figsize=(8,6),dpi=300)\n",
     "pmap=Basemap(projection='merc',llcrnrlat=-55,urcrnrlat=10,\\\n",
@@ -376,6 +417,7 @@
     "#Plot the ore deposit probability\n",
     "xh, yh = pmap(ml_data_np[ml_data_np[:,-1]==1,0],ml_data_np[ml_data_np[:,-1]==1,1])\n",
     "l2 = pmap.scatter(xh, yh, 20, marker='.',c=pRF[:147,1],cmap=plt.cm.copper,zorder=3)\n",
+    "#l2 = pmap.scatter(xh, yh, 20, marker='.',edgecolor='dimgrey',linewidth=0.5,c=pRF[:147,1],cmap=plt.cm.copper,zorder=3)\n",
     "cbar=pmap.colorbar(l2,location='bottom',pad=\"5%\",ticks=[0,0.5,1])\n",
     "plt.clim(0,1)\n",
     "cbar.set_label('Prediction Probability (%)')\n",
@@ -385,23 +427,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Datasets"
+   ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "Datasets\n",
     "\n",
     "Topography/Bathymetry\n",
     "WORLDBATH: ETOPO5 5x5 minute Navy bathymetry. http://iridl.ldeo.columbia.edu/SOURCES/.NOAA/.NGDC/.ETOPO5/\n",
     "    \n",
     "ML dataset. \n",
-    "Expanded in Butterworth etal 2016 from a compilation made by by Bertrand et al 2016. https://doi.org/10.1002/2016TC004289\n",
+    "Expanded in Butterworth et al 2016 from a compilation made by by Bertrand et al 2016. https://doi.org/10.1002/2016TC004289\n",
     "\n",
     "Shape files polygons: \n",
     "GPlates2.0. https://www.gplates.org/\n",
@@ -428,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
